--- a/index.html
+++ b/index.html
@@ -47,8 +47,131 @@
 </section>
    </header>
    <main>
-   <section>
-      
+   <section class="main-container">
+      <div class="service">
+        <h2>سرویس‌های تپسی</h2>
+        <div class="container-service">
+        <nav class="cursor-service">
+            <a href="#" id="tapsi-classic"><img src="img/cc-classic.png"><span>تپسی کلاسیک</span></a>
+            <a href="#"><img src="img/cc-motopeyk.png"><span>موتوپیک</span></a>
+            <a href="#"><img src="img/cc-autopeyk.png"> <span>اتوپیک</span></a>
+            <a href="#"><img src="img/cc-plus.png"> <span>تپسی پلاس</span></a>
+            <a href="#"><img src="img/cc-tel.png"> <span>تپسی تلفنی</span></a>
+            <a href="#"><img src="img/cc-hamyar.png"> <span>همیار</span></a>
+            <a href="#"><img src="img/cc-hamkhat.png"> <span>هم‌خط</span></a>
+            <a href="#"><img src="img/cc-taxi.png"> <span> تاکسی</span></a>
+            <a href="#"><img src="img/cc-line.png"> <span>تپسی لاین</span></a>
+        </nav>
+    </div>
+        <div class="tab-service">
+            <div class="description">
+                <h3>تپسی کلاسیک</h3>
+                <p>با سرویس کلاسیک تپسی، یک خودروی اختصاصی برای رسیدن به مقصدتان دارید. تپسی کلاسیک، راهی سریع و آسان برای سفرهای درون‌شهری در هر ساعتی از روز است. در این سرویس، شما امکان تعیین دو یا چند مقصد و همچنین توقف در مسیر را دارید.</p>
+            </div>
+            <img src="img/illus-classic.webp" alt="">
+        </div>
+      </div>
+      <hr>
+      <section class="corporate">
+          <div class="description">
+              <h2>خدمات تپسی ویژه کسب‌وکارها</h2>
+              <p>پنل سازمانی تپسی، یک سامانه تحت وب است که به سادگی امکان درخواست هم‌زمان تعداد نامحدودی خودرو و پیک را برای کسب‌وکارها و سازمان‌ها فراهم می‌کند. و با استفاده از آن می‌توانید ماموریت های درون‌شهری و ارسال کالاهای خود را به سادگی مدیریت کنید.</p>
+              <a href="#">اطلاعات بیشتر سرویس سازمانی</a>
+              <button>ورود و ثبت نام پنل سازمانی</button>
+          </div>
+          <img src="img/i-mac.webp">
+      </section>
+      <section class="corporate">
+          <div id="description">
+              <h2>خرید کد اعتبار تپسی</h2>
+              <p>
+                کاربران، کسب‌وکارها و سازمان‌ها می‌توانند به تعداد و مبلغ مورد نظرشان، کد اعتبار یا کد تخفیف تپسی تهیه کرده، برای خود، پرسنل و یا مشتریانشان استفاده کنند و از تخفیف‌های ویژه تپسی نیز بهره‌مند شوند.
+              </p>
+              <p>
+                این کدها امکان سفارشی‌سازی بر اساس مبدا، مقصد، زمان، درصد و مبلغ را دارند.
+              </p>
+              <button>خرید کد تخفیف و اعتبار</button>
+          </div>
+          <img src="img/macbook.webp">
+      </section>
+    </section>
+    <section class="parallax">
+        <div class="details">
+            <h4>بسته امنیت سفر</h4>
+            <p>امکانات ویژه امنیت سفر، شامل اشتراک سفر و پشتیبانی ۲۴ ساعته تیم متخصصین امنیت تپسی</p>
+        </div>
+        <div class="column"></div>
+        <div class="details">
+          <h4>درخواست تلفنی</h4>
+          <p>امکان درخواست خودرو بدون نیاز به اینترنت و اپلیکیشن، از طریق تماس با شماره ۱۶۳۰</p>
+      </div>
+      <div class="column"></div>
+      <div class="details">
+          <h4>دسترس پذیری برای توان یابان</h4>
+          <p>امکان استفاده کاربران نابینا و ناشنوا از اپلیکیشن تپسی و عدم کسر کمیسیون از سفر مسافران ویلچردار</p>
+      </div>
+      <div class="column"></div>
+      <div class="details">
+          <h4>امکانات هوشمند</h4>
+          <p>سهولت استفاده از اپلیکیشن با پیشنهاد مبدا و مقصد سفر، مقاصد منتخب و پیشنهادهای ویژه شما</p>
+      </div>
+    </section>
+    <br>
+    <section class="main-container">
+        <section class="driver">
+            <div class="describe">
+                <h2>مزایای تپسی برای رانندگان تاکسی اینترنتی</h2>
+                <div class="txt">
+                <p>رانندگان (سفیران) به‌عنوان همکاران تپسی، جایگاه ویژه‌ای برای شرکت دارند. 
+                    به همین‌دلیل مزایای مختلفی برای آنها در نظر گرفته شده است.
+                </p>
+                <h3>کسب درآمد روزانه، پایدار و بدون محدودیت</h3>
+                <p>۱. امکان تسویه‌ی اعتبار در هر ساعت از شبانه‌روز</p>
+                <p>۲. طرح‌های تشویقی، ماموریت‌ها‌، پاداش و اعطای وام‌های قرض‌الحسنه به‌طور دوره‌ای</p>
+                <p>۳. نمایش مکان‌های پردرخواست در اپلیکیشن و دریافت سفرهای طلایی</p>
+                <h3>تضمین امنیت و پشتیبانی رانندگان</h3>
+                <p>۱. پشتیبانی ۲۴ ساعته</p>
+                <p>۲. امکانات امنیت سفر شامل تماس اضطراری با واحد امنیت و پشتیبانی ۲۴ ساعته تیم امنیت</p>
+                <h3>واریز سهمیه بنزین ویژه رانندگان تپسی</h3>
+                <p>۱. نمایش میزان پیمایش ماهانه درون اپلیکیشن</p>
+                <p>۲. محاسبه‌ی مسافت طی شده تا مسافر در پیمایش</p>
+                <h3>استفاده از مزایای <a href="#">باشگاه رانندگان تپسی</a></h3>
+                <p>۱. تخفیف روی خدمات خودرو مانند بیمه، سرویس‌های دوره‌ای، خرید لاستیک و ...</p>
+                <p>۲. تخفیف روی خدمات رفاهی مانند وام قرض‌الحسنه، خدمات درمانی، خرید اقساطی و ...</p>
+            </div>
+                <div class="btn">
+                    <a href="#">ثبت نام راننده تاکسی آنلاین</a>
+                    <a href="#">دانلود برنامه تپسی راننده</a>
+                </div>
+            </div>
+            <img src="img/driver.webp" alt="">
+        </section>
+        <section class="blog">
+            <h2>تازه‌ترین‌های وبلاگ تپسی</h2>
+            <div class="box-blog">
+                <a href="#" class="bolg-detailes">
+                    <img src="img/etehadie-no-logo-scaled.jpg" alt="">
+                    <div class="text-blog">
+                    <h3>دومین دوره انتخابات اتحادیه کسب و کارهای مجازی</h3>
+                    <p>دیدگاه و اهداف میلاد منشی‌پور، کاندیدای دومین دوره انتخابات اتحادیه کسب و کارهای مجازی درباره‌ من من میلاد منشی پور، مدیرعامل و هم بنیان‌گذار تپسی هستم؛ سال 1394 پس از یک دهه فعالیت در خارج از کشور در حوزه مشاوره مدیریت، به ایران برگشتم و به همراه دو نفر از دوستانم، سامانه درخواست آنلاین خودرو</p>
+                    </div>
+                </a>
+                <a href="#" class="bolg-detailes">
+                    <img src="img/A68CB9F1-AA36-4B75-99B7-DE475A5FFBDF.jpeg" alt="">
+                    <div class="text-blog">
+                    <h3>تخفیف ویژه دیجی‌کالا جت برای کاربران تپسی</h3>
+                    <p>سوپرمارکت آنلاین «دیجی‌کالا جت» با ارسال سریع محصولات سوپرمارکتی شروع به کار کرده است و سفارش‌های آنلاین سوپرمارکتی را از فروشگاه‌های زنجیره‌ای معتبر و یا فروشگاه‌های منتخب شهرهای تهران، کرج، اصفهان، قم و مشهد تامین می‌کند. این مجموعه برای شما کاربران تپسی تخفیف ویژه‌ای درنظر گرفته است و با استفاده از کد زیر می‌توانید برای</p>
+                    </div>
+                </a>
+                <a href="#" class="bolg-detailes">
+                    <img src="img/blog2-scaled.jpg" alt="">
+                    <div class="text-blog">
+                    <h3>برای دریافت دز سوم واکسن، با تخفیف به مراکز واکسیناسیون بروید!</h3>
+                    <p>تپسی با همراهی شرکت سیناژن (تولیدکننده واکسن اسپایکوژن) برای رفتن به مراکز واکسیناسیون و تزریق دز سوم، تخفیف ویژه برایتان درنظر گرفته است. دیگر چیزی به نوروز باقی نمانده و این روزهای پایانی سال همه ما در تکاپو هستیم تا کارهای ناتمام را تمام کنیم و تعطیلات سال نو را با خاطری آسوده در کنار</p>
+                </div>
+                </a>
+            </div>
+        </section>
     </section>
     </main>
    <footer></footer>
