--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </div>
     </section>
     <br>
-    <section class="main-container">
+    <section class="driver-container">
         <section class="driver">
             <div class="describe">
                 <h2>مزایای تپسی برای رانندگان تاکسی اینترنتی</h2>
@@ -173,7 +173,140 @@
             </div>
         </section>
     </section>
+    <section class="location">
+        <div class="location-container">
+            <h2>تپسی در ایران</h2>
+            <div class="city-container">
+            <div class="city">
+                <h3>تهران</h3>
+                <h3>tehran</h3>
+            </div>
+            <div class="city">
+                <h3>کرج</h3>
+                <h3>karaj</h3>
+            </div>
+            <div class="city">
+                <h3>مشهد</h3>
+                <h3>mashhad</h3>
+            </div>
+            <div class="city">
+                <h3>اصفهان</h3>
+                <h3>isfhan</h3>
+            </div>
+            <div class="city">
+                <h3>شیراز</h3>
+                <h3>shiraz</h3>
+            </div>
+            <div class="city">
+                <h3>ارومیه</h3>
+                <h3>urmia</h3>
+            </div>
+            <div class="city">
+                <h3>لاهیجان</h3>
+                <h3>lahijan</h3>
+            </div>
+            <div class="city">
+                <h3>رشت</h3>
+                <h3>rasht</h3>
+            </div>
+            <div class="city">
+                <h3>انزلی</h3>
+                <h3>anzali</h3>
+            </div>
+            <div class="city">
+                <h3>تبریز</h3>
+                <h3>tabriz</h3>
+            </div>
+            <div class="city">
+                <h3>ساری</h3>
+                <h3>sari</h3>
+            </div>
+            <div class="city">
+                <h3>یزد</h3>
+                <h3>yazd</h3>
+            </div>
+            <div class="city">
+                <h3>کرمان</h3>
+                <h3>kerman</h3>
+            </div>
+            <div class="city">
+                <h3>قم</h3>
+                <h3>qom</h3>
+            </div>
+            <div class="city">
+                <h3>اهواز</h3>
+                <h3>ahvaz</h3>
+            </div>
+            <div class="city">
+                <h3>بابل</h3>
+                <h3>babol</h3>
+            </div>
+            <div class="city">
+                <h3>قائم شهر</h3>
+                <h3>qaem shahr</h3>
+            </div>
+            <div class="city">
+                <h3>آمل</h3>
+                <h3>amol</h3>
+            </div>
+        </div>
+        </div>
+    </section>
     </main>
-   <footer></footer>
+   <footer>
+       <div class="footer-container">
+           <div class="brands">
+               <a href="#"><img src="img/logo-light.svg" alt=""></a>
+               <h5>اپلیکیشن درخواست خودرو و پیک</h5>
+               <p>تمام حقوق مادی و معنوی این
+                    وبسایت متعلق به تپسی است. </p>
+           </div>
+           <div class="menu-link">
+               <h4>تپسی</h4>
+               <a href="#">وبلاگ تپسی</a>
+               <a href="#">فرصت شغلی</a>
+               <a href="#">تماس با ما</a>
+               <a href="#">لوگو و هویت سازمانی</a>
+               <a href="#">معرفی راننده به تپسی</a>
+           </div>
+           <div class="menu-link">
+            <h4>مسافران</h4>
+            <a href="#">دانلود اپ سفر</a>
+            <a href="#">نسخه وب تپسی</a>
+            <a href="#">پرسش های متداول مسافران</a>
+            <a href="#">شرایط و قوانین مسافران</a>
+            <a href="#">باشگاه مشتریان</a>
+        </div>
+        <div class="menu-link">
+            <h4>رانندگان</h4>
+            <a href="#">ئانلود اپ سفر</a>
+            <a href="#">ثبت نام راننده تاکسی اینترنتی</a>
+            <a href="#">پرسش های متداول سفیران</a>
+            <a href="#">شرایط و قوانین سفیران</a>
+            <a href="#">باشگاه سفیران</a>
+        </div>
+        <div class="menu-link">
+            <h4>کسب و کارها</h4>
+            <a href="#">پنل سازمانی تپسی</a>
+            <a href="#">خرید کد و اعتبار و تخفیف</a>
+            <a href="#">دریافت API</a>
+        </div>
+        <div class="symbol">
+            <a href="#"><img src="img/etehadiye.png" alt=""></a>
+            <a href="#"><img src="img/logoy-top.png" alt=""></a>
+            <a href="#"><img src="img/logo.aspx.png" alt=""></a>
+        </div>
+       </div>  
+    <div class="social">
+        <h5>تپسی در شبکه‌های اجتماعی </h5>
+        <p>تمام حقوق مادی و معنوی این وبسایت متعلق به تپسی است.</p>
+        <ul><a href="#"><img src="img/Facebook Logo.svg" alt="" id="icon-Facebook"></a>
+            <a href="#"><img src="img/Instagram Logo.svg" alt="" id="icon-Instagram"></a>
+            <a href="#"><img src="img/Twitter Logo.svg" alt="" id="icon-Twitter"></a>
+            <a href="#"><img src="img/LinkedIn Logo.svg" alt="" id="icon-LinkedIn"></a>
+            <a href="#"><img src="img/Telegram Logo.svg" alt="" id="icon-Telegram"></a>
+        </ul>
+    </div>
+   </footer>
 </body>
 </html>
